# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")

source_set("ozone_clipboard") {
  sources = [
    "clipboard/clipboard_ozone.cc",
    "clipboard/clipboard_ozone.h",
  ]
  deps = [
    "//ui/ozone:platform",
  ]
}
